--- a/sobre-estrabismo.html
+++ b/sobre-estrabismo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre o Estrabismo - Rifa Solidária para o Miguel</title>
+    <title>Rifa Solidária para o Miguel</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -23,66 +23,267 @@
             margin: 0 15px;
             text-decoration: none;
         }
-        .content {
-            max-width: 800px;
+        .hero {
+            text-align: center;
+            padding: 20px;
+            background-color: white;
+        }
+        .progress-container {
+            margin: 20px auto;
+            width: 80%;
+            background-color: #ddd;
+            border-radius: 5px;
+        }
+        .progress-bar {
+            height: 20px;
+            background-color: #28a745;
+            border-radius: 5px;
+            text-align: center;
+            color: white;
+            transition: width 0.3s;
+        }
+        .number-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
+            gap: 5px;
+            max-width: 1000px;
+            margin: 20px auto;
+        }
+        .number {
+            background-color: #28a745;
+            color: white;
+            padding: 10px;
+            text-align: center;
+            cursor: pointer;
+            border-radius: 5px;
+            font-size: 0.9em;
+        }
+        .number.sold {
+            background-color: #ccc;
+            cursor: not-allowed;
+        }
+        .number.selected {
+            background-color: #ffc107;
+            color: black;
+        }
+        .form-container {
+            max-width: 400px;
             margin: 20px auto;
             padding: 20px;
             background-color: white;
             border-radius: 5px;
             box-shadow: 0 0 10px rgba(0,0,0,0.1);
         }
+        .form-container input {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        .form-container button {
+            background-color: #007bff;
+            color: white;
+            padding: 10px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            width: 100%;
+        }
         footer {
             background-color: #333;
             color: white;
             text-align: center;
             padding: 10px;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
+        }
+        .share-button {
+            background-color: #25d366;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            text-decoration: none;
+            display: inline-block;
         }
     </style>
 </head>
 <body>
-    <header>
-        <h1>Rifa Solidária para o Miguel</h1>
-        <nav>
-            <a href="index.html">Início</a>
-            <a href="como-funciona.html">Como Funciona</a>
-            <a href="sobre-estrabismo.html">Sobre o Estrabismo</a>
-            <a href="index.html#contato">Contato</a>
-            <a href="javascript:void(0)" onclick="checkPassword()">Sorteio</a>
-        </nav>
-    </header>
 
-    <section class="content">
-        <h3>Sobre o Estrabismo e a Importância da Cirurgia aos 4 Anos</h3>
-        <p>O estrabismo é uma condição em que os olhos não estão alinhados corretamente, podendo apontar em direções diferentes. No caso do Miguel, que tem 4 anos, essa cirurgia é crucial porque:</p>
-        <ul>
-            <li><strong>Desenvolvimento Visual**: Aos 4 anos, a visão do Miguel ainda está se desenvolvendo. Corrigir o estrabismo agora ajuda a evitar que ele perca profundidade ou desenvolva ambliopia (olho preguiçoso).</li>
-            <li><strong>Saúde Ocular**: A cirurgia pode prevenir problemas futuros, como dor de cabeça ou tensão ocular, além de melhorar a estética e a autoestima.</li>
-            <li><strong>Benefícios para a Vida**: Com os olhos alinhados, Miguel terá uma visão binocular melhor, essencial para atividades como esportes, leitura e aprendizado, impactando positivamente sua infância e futuro.</li>
-        </ul>
-        <p>Fazer a cirurgia agora é ideal porque o cérebro de uma criança pequena é mais adaptável, aumentando as chances de sucesso e recuperação completa.</p>
-    </section>
+<header>
+    <h1>Rifa Solidária para o Miguel</h1>
+    <nav>
+        <a href="#home">Início</a>
+        <a href="como-funciona.html">Como Funciona</a>
+        <a href="sobre-estrabismo.html">Sobre o Estrabismo</a>
+        <a href="#contato">Contato</a>
+        <a href="javascript:void(0)" onclick="checkPassword()">Sorteio</a>
+    </nav>
+</header>
 
-    <footer>
-        <p>Contato:</p>
-        <p>Evelyn Mae do Miguel: <a href="https://wa.me/65984739520">+65 98473-9520</a></p>
-        <p>Eder Pai do Miguel: <a href="https://wa.me/65999731992">+65 99973-1992</a></p>
-        <p>Para dúvidas, entre em contato via WhatsApp!</p>
-        <p>Compartilhe no WhatsApp: <a href="https://wa.me/?text=Ajude%20o%20Miguel%20na%20rifa%20solidária!%20Compre%20símbolos%20por%20R$10%20e%20concorra%20a%20R$2.000.%20Mais%20info:%20[insira%20link]%20%0AContato:%20+65984739520%20ou%20+65999731992" class="share-button">Compartilhar</a></p>
-        <p>© 2025 Rifa Solidária para o Miguel</p>
-    </footer>
+<section class="hero" id="home">
+    <h2>Ajude o Miguel a enxergar o mundo com clareza!</h2>
+    <p>Compre números por R$ 10 e concorra a R$ 2.000. Todo o valor será usado para a cirurgia de estrabismo do Miguel!</p>
+    <div class="progress-container">
+        <div class="progress-bar" id="progress-bar">0% Arrecadado</div>
+    </div>
+    <button onclick="scrollToNumbers()" style="background-color: #ffc107; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer;">Escolha seus números agora</button>
+</section>
 
-    <script>
-        function checkPassword() {
-            const password = prompt("Digite a senha para acessar a página de sorteio:");
-            if (password === "VAIDACERTO") {
-                window.location.href = "sorteio.html";
-            } else {
-                alert("Senha incorreta!");
-            }
+<section id="numbers" class="number-grid">
+    <!-- Os números serão gerados via JavaScript -->
+</section>
+
+<section class="form-container">
+    <h3>Finalize sua compra</h3>
+    <form id="payment-form">
+        <input type="text" id="buyer-name" placeholder="Nome Completo" required>
+        <input type="tel" id="buyer-phone" placeholder="Telefone (WhatsApp)" required>
+        <p>Números selecionados: <span id="selected-numbers">Nenhum</span></p>
+        <p>Total: R$ <span id="total-price">0</span></p>
+        <button type="submit">Pagar com Pix/Cartão</button>
+    </form>
+</section>
+
+<footer id="contato">
+    <p>Contato:</p>
+    <p>Evelyn Mae do Miguel: <a href="https://wa.me/65984739520">+65 98473-9520</a></p>
+    <p>Eder Pai do Miguel: <a href="https://wa.me/65999731992">+65 99973-1992</a></p>
+    <p>Para dúvidas, entre em contato via WhatsApp!</p>
+    <p>Compartilhe no WhatsApp: <a href="https://wa.me/?text=Ajude%20o%20Miguel%20na%20rifa%20solidária!%20Compre%20números%20por%20R$10%20e%20concorra%20a%20R$2.000.%20Mais%20info:%20[insira%20link]%20%0AContato:%20+65984739520%20ou%20+65999731992" class="share-button">Compartilhar</a></p>
+    <p>© 2025 Rifa Solidária para o Miguel</p>
+</footer>
+
+<script>
+    function scrollToNumbers() {
+        document.getElementById('numbers').scrollIntoView({ behavior: 'smooth' });
+    }
+
+    function checkPassword() {
+        const password = prompt("Digite a senha para acessar a página de sorteio:");
+        if (password === "VAIDACERTO") {
+            window.location.href = "sorteio.html";
+        } else {
+            alert("Senha incorreta!");
         }
-    </script>
+    }
+
+    const numberContainer = document.getElementById('numbers');
+    const selectedNumbers = [];
+    const pricePerNumber = 10;
+
+    // Função para carregar números da API
+    async function loadData() {
+        try {
+            const availableRes = await fetch('https://mp-api.onrender.com/available_numbers');
+            const availableNumbers = await availableRes.json();
+
+            for (let i = 1; i <= 1700; i++) {
+                const num = String(i).padStart(4, '0');
+                const numDiv = document.createElement('div');
+                numDiv.classList.add('number');
+                numDiv.textContent = num;
+
+                if (!availableNumbers.includes(num)) {
+                    numDiv.classList.add('sold');
+                } else {
+                    numDiv.addEventListener('click', () => {
+                        if (!numDiv.classList.contains('sold')) {
+                            numDiv.classList.toggle('selected');
+                            if (numDiv.classList.contains('selected')) {
+                                selectedNumbers.push(num);
+                            } else {
+                                const index = selectedNumbers.indexOf(num);
+                                if (index > -1) selectedNumbers.splice(index, 1);
+                            }
+                            document.getElementById('selected-numbers').textContent = selectedNumbers.length > 0 ? selectedNumbers.join(', ') : 'Nenhum';
+                            document.getElementById('total-price').textContent = selectedNumbers.length * pricePerNumber;
+                        }
+                    });
+                }
+
+                numberContainer.appendChild(numDiv);
+            }
+
+            const progressRes = await fetch('https://mp-api.onrender.com/progress');
+            const { progress } = await progressRes.json();
+            const progressBar = document.getElementById('progress-bar');
+            progressBar.style.width = `${progress}%`;
+            progressBar.textContent = `${progress}% Arrecadado`;
+        } catch (error) {
+            console.error('Erro ao carregar dados da API:', error);
+            alert('Erro ao carregar números. Tente novamente mais tarde.');
+            // Fallback temporário (opcional, remover após confirmar API)
+            for (let i = 1; i <= 1700; i++) {
+                const num = String(i).padStart(4, '0');
+                const numDiv = document.createElement('div');
+                numDiv.classList.add('number');
+                numDiv.textContent = num;
+                numDiv.addEventListener('click', () => {
+                    numDiv.classList.toggle('selected');
+                    if (numDiv.classList.contains('selected')) {
+                        selectedNumbers.push(num);
+                    } else {
+                        const index = selectedNumbers.indexOf(num);
+                        if (index > -1) selectedNumbers.splice(index, 1);
+                    }
+                    document.getElementById('selected-numbers').textContent = selectedNumbers.length > 0 ? selectedNumbers.join(', ') : 'Nenhum';
+                    document.getElementById('total-price').textContent = selectedNumbers.length * pricePerNumber;
+                });
+                numberContainer.appendChild(numDiv);
+            }
+            document.getElementById('progress-bar').style.width = `0%`;
+            document.getElementById('progress-bar').textContent = `0% Arrecadado`;
+        }
+    }
+
+    loadData();
+
+    // Enviar dados para a API
+    document.getElementById('payment-form').addEventListener('submit', async (event) => {
+        event.preventDefault();
+
+        const buyerName = document.getElementById('buyer-name').value;
+        const buyerPhone = document.getElementById('buyer-phone').value;
+        const quantity = selectedNumbers.length;
+
+        if (quantity === 0) {
+            alert('Por favor, selecione pelo menos um número.');
+            return;
+        }
+
+        if (!buyerName || !buyerPhone) {
+            alert('Por favor, preencha nome e telefone.');
+            return;
+        }
+
+        try {
+            const response = await fetch('https://mp-api.onrender.com/create_preference', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({
+                    quantity,
+                    buyerName,
+                    buyerPhone,
+                    numbers: selectedNumbers
+                })
+            });
+
+            const data = await response.json();
+
+            if (data.init_point) {
+                window.location.href = data.init_point;
+            } else {
+                alert(data.error || 'Erro ao criar o pagamento. Tente novamente.');
+            }
+        } catch (error) {
+            console.error('Erro ao conectar ao servidor:', error);
+            alert('Erro ao conectar ao servidor. Tente novamente mais tarde.');
+        }
+    });
+</script>
+
 </body>
 </html>
