--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             text-align: center;
             cursor: pointer;
             border-radius: 5px;
-            font-size: 1.5em;
+            font-size: 0.9em;
         }
         .number.sold {
             background-color: #ccc;
@@ -123,15 +123,15 @@
 
 <section class="hero" id="home">
     <h2>Ajude o Miguel a enxergar o mundo com clareza!</h2>
-    <p>Compre símbolos por R$ 10 e concorra a R$ 2.000. Todo o valor será usado para a cirurgia de estrabismo do Miguel!</p>
+    <p>Compre números por R$ 10 e concorra a R$ 2.000. Todo o valor será usado para a cirurgia de estrabismo do Miguel!</p>
     <div class="progress-container">
         <div class="progress-bar" id="progress-bar">0% Arrecadado</div>
     </div>
-    <button onclick="scrollToNumbers()" style="background-color: #ffc107; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer;">Escolha seus símbolos agora</button>
+    <button onclick="scrollToNumbers()" style="background-color: #ffc107; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer;">Escolha seus números agora</button>
 </section>
 
 <section id="numbers" class="number-grid">
-    <!-- Os símbolos serão gerados via JavaScript -->
+    <!-- Os números serão gerados via JavaScript -->
 </section>
 
 <section class="form-container">
@@ -139,7 +139,7 @@
     <form id="payment-form">
         <input type="text" id="buyer-name" placeholder="Nome Completo" required>
         <input type="tel" id="buyer-phone" placeholder="Telefone (WhatsApp)" required>
-        <p>Símbolos selecionados: <span id="selected-numbers">Nenhum</span></p>
+        <p>Números selecionados: <span id="selected-numbers">Nenhum</span></p>
         <p>Total: R$ <span id="total-price">0</span></p>
         <button type="submit">Pagar com Pix/Cartão</button>
     </form>
@@ -150,7 +150,7 @@
     <p>Evelyn Mae do Miguel: <a href="https://wa.me/65984739520">+65 98473-9520</a></p>
     <p>Eder Pai do Miguel: <a href="https://wa.me/65999731992">+65 99973-1992</a></p>
     <p>Para dúvidas, entre em contato via WhatsApp!</p>
-    <p>Compartilhe no WhatsApp: <a href="https://wa.me/?text=Ajude%20o%20Miguel%20na%20rifa%20solidária!%20Compre%20símbolos%20por%20R$10%20e%20concorra%20a%20R$2.000.%20Mais%20info:%20[insira%20link]%20%0AContato:%20+65984739520%20ou%20+65999731992" class="share-button">Compartilhar</a></p>
+    <p>Compartilhe no WhatsApp: <a href="https://wa.me/?text=Ajude%20o%20Miguel%20na%20rifa%20solidária!%20Compre%20números%20por%20R$10%20e%20concorra%20a%20R$2.000.%20Mais%20info:%20[insira%20link]%20%0AContato:%20+65984739520%20ou%20+65999731992" class="share-button">Compartilhar</a></p>
     <p>© 2025 Rifa Solidária para o Miguel</p>
 </footer>
 
@@ -172,50 +172,75 @@
     const selectedNumbers = [];
     const pricePerNumber = 10;
 
-    // Função para gerar símbolos localmente (temporário até a API funcionar)
-    function generateSymbols() {
-        for (let i = 1; i <= 1700; i++) {
-            const symbol = '📱'; // Emoji de WhatsApp como símbolo
-            const symbolDiv = document.createElement('div');
-            symbolDiv.classList.add('number');
-            symbolDiv.textContent = symbol;
-
-            symbolDiv.addEventListener('click', () => {
-                if (!symbolDiv.classList.contains('sold')) {
-                    symbolDiv.classList.toggle('selected');
-                    if (symbolDiv.classList.contains('selected')) {
-                        selectedNumbers.push(i); // Armazena o índice (número real) internamente
-                    } else {
-                        const index = selectedNumbers.indexOf(i);
-                        if (index > -1) selectedNumbers.splice(index, 1);
-                    }
-                    document.getElementById('selected-numbers').textContent = selectedNumbers.length > 0 ? selectedNumbers.length + ' símbolos' : 'Nenhum';
-                    document.getElementById('total-price').textContent = selectedNumbers.length * pricePerNumber;
-                }
-            });
-
-            numberContainer.appendChild(symbolDiv);
-        }
-    }
-
-    // Função para carregar dados da API (opcional, simulando localmente por agora)
+    // Função para carregar números da API
     async function loadData() {
         try {
-            // Simulação local enquanto a API não está online
-            generateSymbols();
-            document.getElementById('progress-bar').style.width = `0%`; // Progresso inicial 0% sem API
-            document.getElementById('progress-bar').textContent = `0% Arrecadado`;
+            const availableRes = await fetch('https://mp-api.onrender.com/available_numbers');
+            if (!availableRes.ok) throw new Error('Failed to fetch available numbers');
+            const availableNumbers = await availableRes.json();
+
+            for (let i = 1; i <= 1700; i++) {
+                const num = String(i).padStart(4, '0');
+                const numDiv = document.createElement('div');
+                numDiv.classList.add('number');
+                numDiv.textContent = num;
+
+                if (!availableNumbers.includes(num)) {
+                    numDiv.classList.add('sold');
+                } else {
+                    numDiv.addEventListener('click', () => {
+                        if (!numDiv.classList.contains('sold')) {
+                            numDiv.classList.toggle('selected');
+                            if (numDiv.classList.contains('selected')) {
+                                selectedNumbers.push(num);
+                            } else {
+                                const index = selectedNumbers.indexOf(num);
+                                if (index > -1) selectedNumbers.splice(index, 1);
+                            }
+                            document.getElementById('selected-numbers').textContent = selectedNumbers.length > 0 ? selectedNumbers.join(', ') : 'Nenhum';
+                            document.getElementById('total-price').textContent = selectedNumbers.length * pricePerNumber;
+                        }
+                    });
+                }
+
+                numberContainer.appendChild(numDiv);
+            }
+
+            const progressRes = await fetch('https://mp-api.onrender.com/progress');
+            const { progress } = await progressRes.json();
+            const progressBar = document.getElementById('progress-bar');
+            progressBar.style.width = `${progress}%`;
+            progressBar.textContent = `${progress}% Arrecadado`;
         } catch (error) {
-            console.error('Erro ao carregar dados, usando símbolos locais:', error);
-            generateSymbols(); // Fallback para gerar símbolos localmente
-            document.getElementById('progress-bar').style.width = `0%`; // Progresso inicial 0% sem API
+            console.error('Erro ao carregar dados da API:', error);
+            alert('Erro ao carregar números. Tente novamente mais tarde.');
+            // Fallback: Generate all numbers as available
+            for (let i = 1; i <= 1700; i++) {
+                const num = String(i).padStart(4, '0');
+                const numDiv = document.createElement('div');
+                numDiv.classList.add('number');
+                numDiv.textContent = num;
+                numDiv.addEventListener('click', () => {
+                    numDiv.classList.toggle('selected');
+                    if (numDiv.classList.contains('selected')) {
+                        selectedNumbers.push(num);
+                    } else {
+                        const index = selectedNumbers.indexOf(num);
+                        if (index > -1) selectedNumbers.splice(index, 1);
+                    }
+                    document.getElementById('selected-numbers').textContent = selectedNumbers.length > 0 ? selectedNumbers.join(', ') : 'Nenhum';
+                    document.getElementById('total-price').textContent = selectedNumbers.length * pricePerNumber;
+                });
+                numberContainer.appendChild(numDiv);
+            }
+            document.getElementById('progress-bar').style.width = `0%`;
             document.getElementById('progress-bar').textContent = `0% Arrecadado`;
         }
     }
 
     loadData();
 
-    // Enviar dados para a API (simulação temporária)
+    // Enviar dados para a API
     document.getElementById('payment-form').addEventListener('submit', async (event) => {
         event.preventDefault();
 
@@ -223,23 +248,43 @@
         const buyerPhone = document.getElementById('buyer-phone').value;
         const quantity = selectedNumbers.length;
 
+        console.log('Selected numbers:', selectedNumbers); // Debug log
+        console.log('Sending to API:', { quantity, buyerName, buyerPhone, numbers: selectedNumbers });
+
         if (quantity === 0) {
-            alert('Por favor, selecione pelo menos um símbolo.');
+            alert('Por favor, selecione pelo menos um número.');
             return;
         }
-
         if (!buyerName || !buyerPhone) {
             alert('Por favor, preencha nome e telefone.');
             return;
         }
 
         try {
-            // Simulação: como a API não está online, mostra um alerta temporário
-            alert('Pagamento simulado. A API não está online. Entre em contato para processar manualmente.');
-            console.log('Dados enviados (simulação):', { quantity, buyerName, buyerPhone, numbers: selectedNumbers });
+            const response = await fetch('https://mp-api.onrender.com/create_preference', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({
+                    quantity,
+                    buyerName,
+                    buyerPhone,
+                    numbers: selectedNumbers
+                })
+            });
+
+            const data = await response.json();
+            console.log('API response:', data);
+
+            if (data.init_point) {
+                window.location.href = data.init_point;
+            } else {
+                alert(data.error || 'Erro ao criar o pagamento. Tente novamente.');
+            }
         } catch (error) {
-            console.error('Erro ao conectar ao servidor:', error);
-            alert('Erro ao conectar ao servidor. A API não está online. Tente novamente mais tarde ou contate o suporte.');
+            console.error('Frontend error:', error);
+            alert('Erro ao conectar ao servidor. Tente novamente mais tarde.');
         }
     });
 </script>
