--- a/index.html
+++ b/index.html
@@ -284,6 +284,7 @@
         }
 
         try {
+            console.log('Sending request to /create_preference with:', { quantity, buyerName, buyerPhone, numbers: selectedNumbers });
             const response = await fetch('https://mp-api.onrender.com/create_preference', {
                 method: 'POST',
                 headers: {
@@ -298,7 +299,7 @@
             });
 
             const data = await response.json();
-            console.log('API response:', data);
+            console.log('API response:', data); // Log da resposta da API
 
             if (data.init_point) {
                 window.location.href = data.init_point;
@@ -306,8 +307,8 @@
                 alert(data.error || 'Erro ao criar o pagamento. Tente novamente.');
             }
         } catch (error) {
-            console.error('Frontend error:', error);
-            alert('Erro ao conectar ao servidor. Tente novamente mais tarde.');
+            console.error('Frontend error:', error.message); // Log detalhado do erro
+            alert('Erro ao conectar ao servidor. Tente novamente mais tarde. Detalhes: ' + error.message);
         }
     });
 </script>
