--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 
         while (retries < maxRetries) {
             try {
-                console.log(`Tentativa ${retries + 1} de enviar pagamento...`);
+                console.log(`Tentativa ${retries + 1} de enviar pagamento...`, new Date().toISOString());
                 const response = await fetch('https://mp-api.onrender.com/create_preference', {
                     method: 'POST',
                     headers: {
@@ -277,6 +277,7 @@
                     body: JSON.stringify(data)
                 });
 
+                console.log(`Response status: ${response.status}`);
                 const responseData = await response.json();
                 console.log('API response:', responseData);
 
@@ -287,10 +288,10 @@
                 }
                 return; // Sai do loop em caso de sucesso
             } catch (error) {
-                console.error(`Erro na tentativa ${retries + 1}:`, error.message);
+                console.error(`Erro na tentativa ${retries + 1}:`, error.message, 'Stack:', error.stack);
                 retries++;
                 if (retries === maxRetries) {
-                    alert('Erro ao conectar ao servidor após várias tentativas. Detalhes: ' + error.message);
+                    alert('Erro ao conectar ao servidor após várias tentativas. Detalhes: ' + error.message + '\nStatus: ' + (error.status || 'unknown'));
                 } else {
                     await new Promise(resolve => setTimeout(resolve, 2000)); // Espera 2 segundos antes de retry
                 }
